<resources>
    <string name="app_name">Ваш прогресс</string>
    <string name="floating_action_button_text_new_cycle">Новый цикл</string>
    <string name="edit_text_hint_name_of_the_cycle">Название цикла</string>
    <string name="edit_text_hint_name_of_the_habit">Название привычки</string>
    <string name="menu_create_cycle">Создать цикл</string>
    <string name="menu_delete_cycle">Удалить цикл</string>
    <string name="menu_save_cycle">Сохранить цикл</string>
    <string name="edit_text_hint_description_of_the_habit">Описание привычки</string>
    <string name="chip_text_monday">П</string>
    <string name="chip_text_tuesday">В</string>
    <string name="chip_text_wednesday">С</string>
    <string name="chip_text_thursday">Ч</string>
    <string name="chip_text_friday">П</string>
    <string name="chip_day_saturday">С</string>
    <string name="chip_day_sunday">В</string>
    <string name="button_text_create_new_habit">Создать и добавить</string>
    <string name="txt_view_amount_of_habits_in_the_cycle">Количетсво привычек в цикле: %1$d</string>
    <string name="txt_view_amount_of_days_to_the_cycle">Количетсво дней до конца цикла: %1$d</string>
</resources>
